--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "lint": "eslint .",
-    "test": "vitest",
-    "test:e2e": "cypress open"
+    "test": "vitest --config ./vitest.config.ts",
+    "test:e2e": "cypress open",
+    "e2e": "cypress open",
+    "e2e:headless": "cypress run",
+    "e2e:dev": "start-server-and-test dev http://localhost:3000 cypress:open",
+    "e2e:run": "start-server-and-test dev http://localhost:3000 cypress:run",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
@@ -28,12 +34,13 @@
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@types/node": "^20.10.4",
     "@typescript-eslint/parser": "^6.14.0",
-    "@vitejs/plugin-vue": "^4.5.2",
-    "@vue/test-utils": "^2.4.3",
-    "cypress": "^13.6.1",
+    "@vitejs/plugin-vue": "^4.6.2",
+    "@vue/runtime-core": "^3.5.13",
+    "cypress": "^13.17.0",
     "eslint": "^8.55.0",
+    "jsdom": "^25.0.1",
+    "start-server-and-test": "^2.0.9",
     "typescript": "^5.3.3",
-    "vitest": "^1.0.4",
     "vue-tsc": "^2.1.10"
   }
 }
